infrastructure/gatekeeper/constraints/networkpolicy-egress-defined/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNetworkPolicyEgress
metadata:
  labels:
    owner: platform
  name: networkpolicy-egress-explicit
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["NetworkPolicy"]
  parameters:
    enforcedNamespacePrefixes: []
