infrastructure/gatekeeper/tests/networkpolicy-egress-defined/fail-no-egress-in-enforced.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pol
  namespace: k8sforge-egress-shouldfail
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress: []
