infrastructure/gatekeeper/tests/networkpolicy-egress-defined/pass-empty-egress-default-ns.yaml
# Default constraint has no prefixes: nothing to enforce
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pol
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress: []
