infrastructure/gatekeeper/tests/networkpolicy-egress-defined/pass-empty-egress-wrong-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pol
  namespace: other-namespace
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress: []
