infrastructure/gatekeeper/tests/networkpolicy-egress-defined/pass-with-egress-in-enforced.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pol
  namespace: k8sforge-egress-ok
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
